--- a/packages/node-package/package.json
+++ b/packages/node-package/package.json
@@ -9,10 +9,29 @@
   "author": "moon",
   "license": "MIT",
   "repository": "https://github.com/moonrepo/examples",
-  "packemon": {
-    "format": "lib",
-    "platform": "node"
-  },
+  "packemon": [
+    {
+      "inputs": {
+        "index": "src/index.ts"
+      },
+      "platform": "node"
+    },
+    {
+      "inputs": {
+        "web": "src/index.ts"
+      },
+      "platform": "browser",
+      "support": "current"
+    },
+    {
+      "inputs": {
+        "node": "src/index.ts"
+      },
+      "format": "mjs",
+      "platform": "node",
+      "support": "experimental"
+    }
+  ],
   "engines": {
     "node": ">=14.15.0",
     "npm": ">=6.14.0"
