--- a/.moon/workspace.yml
+++ b/.moon/workspace.yml
@@ -1,14 +1,13 @@
 $schema: 'https://moonrepo.dev/schemas/workspace.json'
 
 projects:
-  browser-package: 'packages/browser-package'
   cjs-package: 'packages/cjs-package'
   mjs-package: 'packages/mjs-package'
   node-package: 'packages/node-package'
 
 node:
   version: '18.0.0'
-  packageManager: 'yarn'
+  packageManager: 'npm'
   addEnginesConstraint: true
   dedupeOnLockfileChange: true
   syncProjectWorkspaceDependencies: true
