--- a/.moon/workspace.yml
+++ b/.moon/workspace.yml
@@ -3,7 +3,7 @@ $schema: 'https://moonrepo.dev/schemas/workspace.json'
 projects:
   cjs-package: 'packages/cjs-package'
   mjs-package: 'packages/mjs-package'
-  node-package: 'packages/node-package'
+  core: 'packages/core'
 
 node:
   version: '18.0.0'
