--- a/package.json
+++ b/package.json
@@ -11,17 +11,21 @@
     "packages/*"
   ],
   "devDependencies": {
+    "@babel/preset-env": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
     "@moonrepo/cli": "^0.6.0",
-    "@types/jest": "^27.5.1",
+    "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.35",
     "babel-preset-beemo": "^2.0.0",
     "eslint": "^8.16.0",
     "eslint-config-beemo": "^2.1.1",
-    "jest": "^28.1.0",
-    "jest-preset-beemo": "^2.2.0",
+    "install": "^0.13.0",
     "lint-staged": "^13.0.3",
+    "mocha": "^10.0.0",
+    "npm": "^8.13.2",
     "packemon": "^2.3.1",
     "prettier": "^2.7.1",
+    "ts-node": "^10.8.2",
     "typescript": "^4.7.3"
   },
   "lint-staged": {
