--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "@company/node-package",
+  "name": "@file-cache/core",
   "version": "0.0.0",
-  "description": "A Node.js package.",
+  "description": "Core library for file-cache",
   "keywords": [
     "node",
     "lib"
   ],
+  "type": "module",
   "author": "moon",
   "license": "MIT",
   "repository": "https://github.com/moonrepo/examples",
@@ -45,6 +46,13 @@
   ],
   "types": "./dts/index.d.ts",
   "main": "./mjs/index.mjs",
+  "dependencies": {
+    "pkg-dir": "^6.0.1"
+  },
+  "devDependencies": {
+    "mocha": "^10.0.0",
+    "ts-node": "^10.8.2"
+  },
   "exports": {
     "./package.json": "./package.json",
     "./*": {
