--- a/packages/npm/tsconfig.json
+++ b/packages/npm/tsconfig.json
@@ -1,15 +1,15 @@
 {
   "extends": "../../tsconfig.projectOptions.json",
   "compilerOptions": {
-    "outDir": "../../.moon/dts/packages/cjs-package",
+    "outDir": "../../.moon/dts/packages/node-package",
     "rootDir": "."
   },
   "include": [
     "**/*"
   ],
   "exclude": [
-    "cjs",
-    "dts"
+    "dts",
+    "lib"
   ],
   "references": []
 }
