--- a/.moon/project.yml
+++ b/.moon/project.yml
@@ -31,6 +31,8 @@ tasks:
       - 'package.json'
       - 'tsconfig.build.json'
     outputs:
+      - 'mjs'
+      - 'cjs'
       - 'dts'
     env:
       NODE_ENV: 'production'
