--- a/.moon/workspace.yml
+++ b/.moon/workspace.yml
@@ -1,8 +1,7 @@
 $schema: 'https://moonrepo.dev/schemas/workspace.json'
 
 projects:
-  cjs-package: 'packages/cjs-package'
-  mjs-package: 'packages/mjs-package'
+  npm: 'packages/npm'
   core: 'packages/core'
 
 node:
