--- a/packages/npm/package.json
+++ b/packages/npm/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@file-cache/core",
+  "name": "@file-cache/npm",
   "version": "0.0.0",
   "description": "Core library for file-cache",
   "keywords": [
@@ -40,11 +40,12 @@
   "types": "./dts/index.d.ts",
   "main": "./cjs/index.cjs",
   "dependencies": {
-    "pkg-dir": "^6.0.1"
   },
   "devDependencies": {
     "mocha": "^10.0.0",
-    "ts-node": "^10.8.2"
+    "ts-node": "^10.8.2",
+    "@types/node": "^18.0.3",
+    "version-1.0.0": "1.0.0"
   },
   "exports": {
     "./package.json": "./package.json",
