--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "infra": "monorepo",
   "scripts": {
     "moon": "moon --color --log trace",
+    "test": "moon run :test",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,css}\"",
     "prepare": "git config --local core.hooksPath .githooks"
   },
@@ -13,20 +14,19 @@
   "devDependencies": {
     "@babel/preset-env": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
-    "@moonrepo/cli": "^0.6.0",
+    "@moonrepo/cli": "^0.7.0",
     "@types/mocha": "^9.1.1",
-    "@types/node": "^17.0.35",
+    "@types/node": "^18.0.4",
     "babel-preset-beemo": "^2.0.0",
-    "eslint": "^8.16.0",
+    "eslint": "^8.19.0",
     "eslint-config-beemo": "^2.1.1",
     "install": "^0.13.0",
     "lint-staged": "^13.0.3",
     "mocha": "^10.0.0",
-    "npm": "^8.13.2",
     "packemon": "^2.3.1",
     "prettier": "^2.7.1",
-    "ts-node": "^10.8.2",
-    "typescript": "^4.7.3"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,css}": [
