docs: update usage

--- a/packages/npm/package.json
+++ b/packages/npm/package.json
@@ -7,7 +7,7 @@
     "lib"
   ],
   "type": "module",
-  "author": "moon",
+  "author": "azu",
   "license": "MIT",
   "repository": "https://github.com/moonrepo/examples",
   "packemon": [
