--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,7 +7,7 @@
     "lib"
   ],
   "type": "module",
-  "author": "moon",
+  "author": "azu",
   "license": "MIT",
   "repository": "https://github.com/moonrepo/examples",
   "packemon": [
@@ -45,6 +45,9 @@
   "devDependencies": {
     "mocha": "^10.0.0",
     "ts-node": "^10.8.2"
+  },
+  "scripts": {
+    "test": "mocha \"tests/**/*.test.ts\""
   },
   "exports": {
     "./package.json": "./package.json",
