--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@moonrepo/cli": "^0.7.0",
     "@types/mocha": "^9.1.1",
     "@types/node": "^18.0.4",
-    "babel-preset-beemo": "^2.0.0",
     "eslint": "^8.19.0",
     "eslint-config-beemo": "^2.1.1",
     "install": "^0.13.0",
@@ -35,6 +34,6 @@
   },
   "packageManager": "npm@8.11.0",
   "engines": {
-    "node": "^18.0.0"
+    "node": "18.0.0"
   }
 }
