--- a/packages/npm/package.json
+++ b/packages/npm/package.json
@@ -48,6 +48,9 @@
     "@types/node": "^18.0.3",
     "version-1.0.0": "1.0.0"
   },
+  "scripts": {
+    "test": "mocha \"test/**/*.test.ts\""
+  },
   "exports": {
     "./package.json": "./package.json",
     "./*": {
