--- a/packages/npm/package.json
+++ b/packages/npm/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@file-cache/npm",
   "version": "0.0.1",
-  "description": "Core library for file-cache",
+  "description": "npm util for @file-cache",
   "keywords": [
     "node",
-    "lib"
+    "cache",
+    "npm"
   ],
   "type": "module",
   "author": "azu",
