--- a/packages/npm/package.json
+++ b/packages/npm/package.json
@@ -10,7 +10,7 @@
   "type": "module",
   "author": "azu",
   "license": "MIT",
-  "repository": "https://github.com/moonrepo/examples",
+  "repository": "https://github.com/azu/file-cache",
   "packemon": [
     {
       "inputs": {
