--- a/packages/npm/package.json
+++ b/packages/npm/package.json
@@ -52,6 +52,9 @@
   "scripts": {
     "test": "mocha \"tests/**/*.test.ts\""
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "exports": {
     "./package.json": "./package.json",
     "./*": {
