--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "test": "moon run :test",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,css}\"",
     "prepare": "git config --local core.hooksPath .githooks",
-    "versionup:patch": "npm version patch --workspaces",
-    "versionup:minor": "npm version minor --workspaces",
-    "versionup:major": "npm version major --workspaces",
+    "versionup:patch": "npm version patch --workspaces && npm version patch",
+    "versionup:minor": "npm version minor --workspaces && npm version minor",
+    "": "npm version major --workspaces && npm version major",
     "release": "npm run build && npm publish --workspaces"
   },
   "workspaces": [
@@ -33,7 +33,7 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,css}": [
-      "prettier --write"
+      "prettier --write",versionup:major
     ]
   },
   "packageManager": "npm@8.11.0",
