--- a/package.json
+++ b/package.json
@@ -3,30 +3,30 @@
   "name": "moon-examples",
   "infra": "monorepo",
   "scripts": {
-    "moon": "moon --color --log trace",
     "build": "moon run :build",
-    "test": "moon run :test",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,css}\"",
+    "moon": "moon --color --log trace",
     "prepare": "git config --local core.hooksPath .githooks",
-    "versionup:patch": "npm version patch --workspaces --include-workspace-root",
-    "versionup:minor": "npm version minor --workspaces --include-workspace-root",
+    "release": "npm run build && npm publish --workspaces",
+    "test": "moon run :test",
     "versionup:major": "npm version major --workspaces --include-workspace-root",
-    "release": "npm run build && npm publish --workspaces"
+    "versionup:minor": "npm version minor --workspaces --include-workspace-root",
+    "versionup:patch": "npm version patch --workspaces --include-workspace-root"
   },
   "workspaces": [
     "packages/*"
   ],
   "devDependencies": {
-    "@babel/preset-env": "^7.18.6",
+    "@babel/preset-env": "^7.18.9",
     "@babel/preset-typescript": "^7.18.6",
-    "@moonrepo/cli": "^0.7.0",
+    "@moonrepo/cli": "^0.8.1",
     "@types/mocha": "^9.1.1",
-    "@types/node": "^18.0.4",
-    "eslint": "^8.19.0",
-    "eslint-config-beemo": "^2.1.1",
+    "@types/node": "^18.6.2",
+    "eslint": "^8.20.0",
+    "eslint-config-beemo": "^2.1.2",
     "lint-staged": "^13.0.3",
     "mocha": "^10.0.0",
-    "packemon": "^2.3.1",
+    "packemon": "^2.3.2",
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
