--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.projectOptions.json",
   "compilerOptions": {
-    "outDir": "../../.moon/dts/packages/node-package",
+    "outDir": "../../.moon/dts/packages/core",
     "rootDir": "."
   },
   "include": [
@@ -10,7 +10,7 @@
   "exclude": [
     "dts",
     "cjs",
-    "dts"
+    "mjs"
   ],
   "references": []
 }
