--- a/packages/npm/package.json
+++ b/packages/npm/package.json
@@ -7,7 +7,7 @@
     "cache",
     "npm"
   ],
-  "type": "commonjs",
+  "type": "module",
   "author": "azu",
   "license": "MIT",
   "repository": "https://github.com/azu/file-cache",
@@ -18,6 +18,13 @@
       },
       "platform": "node",
       "format": "cjs"
+    },
+    {
+      "inputs": {
+        "index": "./src/index.ts"
+      },
+      "platform": "node",
+      "format": "mjs"
     }
   ],
   "engines": {
@@ -31,7 +38,7 @@
     "src/**/*.{ts,tsx,json}"
   ],
   "types": "./dts/index.d.ts",
-  "main": "./cjs/index.cjs",
+  "main": "./mjs/index.mjs",
   "dependencies": {
     "resolve": "^1.22.1"
   },
@@ -52,13 +59,14 @@
     "./*": {
       "types": "./dts/*.d.ts",
       "node": {
+        "import": "./mjs/*.mjs",
         "require": "./cjs/*.cjs"
       }
     },
     ".": {
       "types": "./dts/index.d.ts",
       "node": {
-        "import": "./cjs/index-wrapper.mjs",
+        "import": "./mjs/index.mjs",
         "require": "./cjs/index.cjs"
       }
     }
