--- a/.moon/project.yml
+++ b/.moon/project.yml
@@ -105,6 +105,7 @@ tasks:
     command: 'tsc'
     args:
       - '--build'
+      - 'tsconfig.build.json'
       - '--verbose'
     inputs:
       - '@globs(sources)'
