--- a/packages/npm/package.json
+++ b/packages/npm/package.json
@@ -40,7 +40,8 @@
   "types": "./dts/index.d.ts",
   "main": "./mjs/index.mjs",
   "dependencies": {
-    "resolve": "^1.22.1"
+    "resolve": "^1.22.1",
+    "textlint": "^12.2.1"
   },
   "devDependencies": {
     "mocha": "^10.0.0",
