--- a/packages/npm/package.json
+++ b/packages/npm/package.json
@@ -40,13 +40,12 @@
   "types": "./dts/index.d.ts",
   "main": "./mjs/index.mjs",
   "dependencies": {
-    "resolve": "^1.22.1",
-    "textlint": "^12.2.1"
+    "resolve": "^1.22.1"
   },
   "devDependencies": {
+    "@types/node": "^18.0.3",
     "mocha": "^10.0.0",
     "ts-node": "^10.8.2",
-    "@types/node": "^18.0.3",
     "version-1.0.0": "1.0.0"
   },
   "scripts": {
