--- a/package.json
+++ b/package.json
@@ -40,5 +40,11 @@
   "engines": {
     "node": "18.0.0"
   },
-  "version": "1.1.3"
+  "version": "1.1.3",
+  "prettier": {
+    "singleQuote": false,
+    "printWidth": 120,
+    "tabWidth": 4,
+    "trailingComma": "none"
+  }
 }
