--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "moon-examples",
+  "name": "file-cache-root",
   "infra": "monorepo",
   "scripts": {
     "build": "moon run :build",
@@ -19,8 +19,8 @@
   "devDependencies": {
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-typescript": "^7.18.6",
-    "@moonrepo/cli": "^0.10.0",
-    "@types/mocha": "^9.1.1",
+    "@moonrepo/cli": "^0.21.3",
+    "@types/mocha": "^10.0.1",
     "@types/node": "^18.6.5",
     "eslint": "^8.21.0",
     "eslint-config-beemo": "^2.1.2",
@@ -36,7 +36,7 @@
       "prettier --write"
     ]
   },
-  "packageManager": "npm@8.11.0",
+  "packageManager": "npm@8.19.2",
   "engines": {
     "node": "18.0.0"
   },
