chore(monorepo): update moon (#9)
* chore(monorepo): update moon

* chore: move vsc

* chore: correct runner

--- a/.moon/workspace.yml
+++ b/.moon/workspace.yml
@@ -4,22 +4,9 @@ projects:
   npm: 'packages/npm'
   core: 'packages/core'
 
-node:
-  version: '18.0.0'
-  packageManager: 'npm'
-  addEnginesConstraint: true
-  dedupeOnLockfileChange: true
-  syncProjectWorkspaceDependencies: true
-  syncVersionManagerConfig: 'nvm'
-
-typescript:
-  projectConfigFileName: 'tsconfig.json'
-  rootConfigFileName: 'tsconfig.json'
-  syncProjectReferences: true
-
 vcs:
   manager: 'git'
   defaultBranch: 'main'
 
-actionRunner:
+runner:
   logRunningCommand: true
