refactor: update packemon v3 and moon 0.23

--- a/packages/core/tsconfig.cjs.json
+++ b/packages/core/tsconfig.cjs.json
@@ -1,7 +1,8 @@
 {
   "extends": "../../tsconfig.options.json",
   "compilerOptions": {
-    "outDir": "dts",
+    "module": "commonjs",
+    "outDir": "cjs",
     "rootDir": "src"
   },
   "include": [
