chore: update moon 1.x

--- a/.moon/toolchain.yml
+++ b/.moon/toolchain.yml
@@ -6,7 +6,7 @@ node:
   addEnginesConstraint: true
   dedupeOnLockfileChange: false
   syncProjectWorkspaceDependencies: true
-  syncVersionManagerConfig: 'nvm'
+  syncVersionManagerConfig: 'nodenv'
 
 typescript:
   projectConfigFileName: 'tsconfig.json'
