--- a/.moon/tasks.yml
+++ b/.moon/tasks.yml
@@ -102,7 +102,7 @@ tasks:
     command: 'tsc'
     args:
       - '--build'
-      - 'tsconfig.build.json'
+      - 'tsconfig.json'
       - '--verbose'
     inputs:
       - '@globs(sources)'
