--- a/packages/npm/package.json
+++ b/packages/npm/package.json
@@ -31,15 +31,6 @@
     "node": ">=16.12.0",
     "npm": ">=6.14.0"
   },
-  "files": [
-    "cjs/**/*",
-    "cjs/**/*.{cjs,mjs,map}",
-    "dts/**/*.d.ts",
-    "mjs/**/*",
-    "mjs/**/*.{mjs,map}",
-    "src/**/*",
-    "src/**/*.{ts,tsx,json}"
-  ],
   "types": "./mjs/index.d.ts",
   "main": "./mjs/index.mjs",
   "dependencies": {
@@ -73,5 +64,10 @@
         "require": "./cjs/index.cjs"
       }
     }
-  }
+  },
+  "files": [
+    "cjs/**/*",
+    "mjs/**/*",
+    "src/**/*"
+  ]
 }
