--- a/packages/npm/tsconfig.cjs.json
+++ b/packages/npm/tsconfig.cjs.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "module": "commonjs",
     "outDir": "cjs",
-    "rootDir": "src"
+    "rootDir": "src",
+    "verbatimModuleSyntax": false
   },
   "include": [
     "src/**/*"
