--- a/.moon/toolchain.yml
+++ b/.moon/toolchain.yml
@@ -1,12 +1,12 @@
 $schema: 'https://moonrepo.dev/schemas/toolchain.json'
 
 node:
-  version: '18.12.1'
+  version: '18.16.1'
   packageManager: 'npm'
   addEnginesConstraint: true
   dedupeOnLockfileChange: false
   syncProjectWorkspaceDependencies: true
-  syncVersionManagerConfig: 'nvm'
+  syncVersionManagerConfig: 'nodenv'
 
 typescript:
   projectConfigFileName: 'tsconfig.json'
