--- a/packages/npm/tsconfig.mjs.json
+++ b/packages/npm/tsconfig.mjs.json
@@ -1,10 +1,9 @@
 {
   "extends": "../../tsconfig.options.json",
   "compilerOptions": {
-    "noEmit": true
+    "outDir": "esm",
+    "rootDir": "src"
   },
-  "include": [
-    "**/*"
-  ],
+  "include": ["src/**/*"],
   "references": []
 }
