--- a/packages/npm/tsconfig.cjs.json
+++ b/packages/npm/tsconfig.cjs.json
@@ -2,6 +2,7 @@
   "extends": "../../tsconfig.options.json",
   "compilerOptions": {
     "module": "commonjs",
+    "moduleResolution": "Node",
     "outDir": "cjs",
     "rootDir": "src",
     "verbatimModuleSyntax": false
