BREAKING CHANGE: add `name` option
- require `name` option

MIGRATION GUIDE:

If your package name is `test-package`, you need to pass `test-package` to create option

```
const cache = await createCache({
    name: "your-tool",
});
```

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -33,7 +33,7 @@
   "types": "./mjs/index.d.ts",
   "main": "./mjs/index.mjs",
   "dependencies": {
-    "pkg-dir": "^6.0.1"
+    "find-cache-dir": "^5.0.0"
   },
   "devDependencies": {
     "mocha": "^10.0.0",
