--- a/.moon/tasks/typescript.yml
+++ b/.moon/tasks/typescript.yml
@@ -1,3 +1,5 @@
+# https://moonrepo.dev/docs/concepts/task-inheritance#scope-by-project-metadata
+# language: typescript tasks
 $schema: 'https://moonrepo.dev/schemas/global-project.json'
 fileGroups:
   configs:
