--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "moon run :build",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,css}\"",
-    "moon": "moon --color --log trace",
+    "moon": "moon",
     "prepare": "git config --local core.hooksPath .githooks",
     "release": "npm run build && npm publish --workspaces",
     "test": "moon run :test",
@@ -19,34 +19,33 @@
     "examples/*"
   ],
   "devDependencies": {
-    "@babel/preset-env": "^7.23.8",
-    "@babel/preset-typescript": "^7.23.3",
-    "@moonrepo/cli": "^1.19.3",
-    "@types/mocha": "^10.0.6",
-    "@types/node": "^20.11.5",
-    "eslint": "^8.56.0",
-    "eslint-config-beemo": "^2.1.2",
-    "lint-staged": "^15.2.0",
-    "mocha": "^10.2.0",
-    "packemon": "^3.2.3",
-    "prettier": "^3.2.4",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-typescript": "^7.26.0",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.17.0",
+    "@moonrepo/cli": "^1.30.6",
+    "@types/mocha": "^10.0.10",
+    "@types/node": "^22.10.3",
+    "lint-staged": "^15.3.0",
+    "mocha": "^11.0.1",
+    "packemon": "^4.1.1",
+    "prettier": "^3.4.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.7.2"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,css}": [
       "prettier --write"
     ]
   },
-  "packageManager": "npm@8.19.2",
-  "engines": {
-    "node": "18.16.1"
-  },
-  "version": "2.0.0",
   "prettier": {
     "singleQuote": false,
     "printWidth": 120,
     "tabWidth": 4,
     "trailingComma": "none"
-  }
+  },
+  "engines": {
+    "node": "22.12.0"
+  },
+  "version": "2.0.0"
 }
